--- a/index.html
+++ b/index.html
@@ -171,11 +171,11 @@
             <a href="#" class="events__more">Mais eventos &rarr;</a>
           </div>
 
-          <div class="events_cover">
+          <div class="event events_cover">
             <img
               src="./images/cafe.png"
               alt="Café na Biblioteca"
-              class="events_image"
+              class="event events_image"
             />
             <div class="person person_name_feynman">
               <p class="person__caption">Joan Feynman</p>
@@ -185,7 +185,7 @@
                 class="person__image person__image_size_l"
               />
             </div>
-            <div class="person person_name_Burbidge">
+            <div class="person person_name_burbidge">
               <p class="person__caption">Margaret Burbidge</p>
               <img
                 src="./images/person_burbidge.png"
