--- a/index.html
+++ b/index.html
@@ -171,11 +171,11 @@
             <a href="#" class="events__more">Mais eventos &rarr;</a>
           </div>
 
-          <div class="event events_cover">
+          <div class="event events__cover">
             <img
               src="./images/cafe.png"
               alt="Café na Biblioteca"
-              class="event events_image"
+              class="event events__image"
             />
             <div class="person person_name_feynman">
               <p class="person__caption">Joan Feynman</p>
