--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
             </li>
           </ul>
         </section>
-        <footer class="footer" id="contacts">
+        <section class="footer" id="contacts">
           <div class="footer__columns">
             <div class="footer__column">
               <img
@@ -320,7 +320,7 @@
           <div class="footer__copyright">
             <p class="footer__copyright-text">&copy; 2025 Werik Jacob</p>
           </div>
-        </footer>
+        </section>
       </main>
     </div>
   </body>
