--- a/index.html
+++ b/index.html
@@ -275,8 +275,8 @@
             </li>
           </ul>
         </section>
-        <footer class="footer" id="contacts">
-          <section class="footer__columns">
+        <section class="footer" id="contacts">
+          <footer class="footer__columns">
             <div class="footer__column">
               <img
                 src="./images/logo_white.svg"
@@ -316,11 +316,11 @@
                 </li>
               </ul>
             </div>
-          </section>
+          </footer>
           <div class="footer__copyright">
             <p class="footer__copyright-text">&copy; 2025 Werik Jacob</p>
           </div>
-        </footer>
+        </section>
       </main>
     </div>
   </body>
