--- a/index.html
+++ b/index.html
@@ -275,54 +275,52 @@
             </li>
           </ul>
         </section>
-        <div class="page" id="contacts">
-          <footer class="footer">
-            <div class="footer__columns">
-              <div class="footer__column">
-                <img
-                  src="./images/logo_white.svg"
-                  alt="Logotipo da Biblioteca Triple Peaks"
-                  class="footer__logo"
-                />
-              </div>
-
-              <div class="footer__column footer__column_content_hours">
-                <h3 class="footer__column-heading">Horário de Funcionamento</h3>
-                <ul class="footer__list">
-                  <li class="footer__list-item">Dias úteis: 9h - 20h</li>
-                  <li class="footer__list-item">Finais de semana: 10h - 18h</li>
-                </ul>
-              </div>
-
-              <div class="footer__column footer__column_content_social">
-                <h4 class="footer__column-heading">Redes Sociais</h4>
-                <ul class="footer__list">
-                  <li class="footer__list-item">
-                    <a class="footer__column-link" href="#">
-                      <img
-                        src="./images/facebook_white.svg"
-                        alt="Facebook icon"
-                        class="footer__social-icon"
-                      />Facebook
-                    </a>
-                  </li>
-                  <li class="footer__list-item">
-                    <a class="footer__column-link" href="#">
-                      <img
-                        src="./images/instagram_white.svg"
-                        alt="Instagram icon"
-                        class="footer__social-icon"
-                      />Instagram
-                    </a>
-                  </li>
-                </ul>
-              </div>
+        <footer class="footer" id="contacts">
+          <div class="footer__columns">
+            <div class="footer__column">
+              <img
+                src="./images/logo_white.svg"
+                alt="Logotipo da Biblioteca Triple Peaks"
+                class="footer__logo"
+              />
             </div>
-            <div class="footer__copyright">
-              <p class="footer__copyright-text">&copy; 2025 Werik Jacob</p>
+
+            <div class="footer__column footer__column_content_hours">
+              <h3 class="footer__column-heading">Horário de Funcionamento</h3>
+              <ul class="footer__list">
+                <li class="footer__list-item">Dias úteis: 9h - 20h</li>
+                <li class="footer__list-item">Finais de semana: 10h - 18h</li>
+              </ul>
             </div>
-          </footer>
-        </div>
+
+            <div class="footer__column footer__column_content_social">
+              <h4 class="footer__column-heading">Redes Sociais</h4>
+              <ul class="footer__list">
+                <li class="footer__list-item">
+                  <a class="footer__column-link" href="#">
+                    <img
+                      src="./images/facebook_white.svg"
+                      alt="Facebook icon"
+                      class="footer__social-icon"
+                    />Facebook
+                  </a>
+                </li>
+                <li class="footer__list-item">
+                  <a class="footer__column-link" href="#">
+                    <img
+                      src="./images/instagram_white.svg"
+                      alt="Instagram icon"
+                      class="footer__social-icon"
+                    />Instagram
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="footer__copyright">
+            <p class="footer__copyright-text">&copy; 2025 Werik Jacob</p>
+          </div>
+        </footer>
       </main>
     </div>
   </body>
