--- a/index.html
+++ b/index.html
@@ -317,9 +317,7 @@
               </ul>
             </div>
           </div>
-          <div class="footer__copyright">
-            <p class="footer__copyright-text">&copy; 2025 Werik Jacob</p>
-          </div>
+          <p class="footer__copyright">&copy; 2025 Werik Jacob</p>
         </footer>
       </main>
     </div>
